# KowitoDB

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  idea.md
.devcontainer/: devcontainer.json
.github/workflows/: bump-version.yml  ci.yml  publish.yml
benchmarks/comparison/: .gitignore  README.md  bench_common.py  bench_milvus.py  bench_qdrant.py  docker-compose.yml  requirements.txt
benchmarks/comparison/embedvec-bench/: Cargo.toml  README.md
benchmarks/comparison/embedvec-bench/src/: main.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  OPERATIONS.md  ROADMAP.md  SDKS.md
examples/: demo_enterprise.py
kowitodb/: Cargo.toml  README.md
kowitodb-core/: Cargo.toml  README.md
kowitodb-core/src/: error.rs  knowledge.rs  lib.rs  types.rs
kowitodb-index/: Cargo.toml  README.md
kowitodb-index/examples/: bench_compare.rs  bench_hnsw.rs
kowitodb-index/src/: fulltext.rs  graph.rs  hnsw.rs  lib.rs  metadata.rs  multivector.rs  sharded_hnsw.rs  time_index.rs  vector.rs
kowitodb-index/tests/: proptest_hnsw.rs
kowitodb-planner/: Cargo.toml  README.md
kowitodb-planner/src/: cache.rs  context.rs  cost.rs  intent.rs  lib.rs  optimizer.rs  plan.rs  reranker.rs  rule_engine.rs
kowitodb-server/: Cargo.toml  README.md  build.rs
kowitodb-server/examples/: agent_memory.rs  embedded.rs
kowitodb-server/proto/: kowitodb.proto
kowitodb-server/src/: cluster.rs  config.rs  db.rs  embedding.rs  lib.rs  llm.rs  local_embedding.rs  memory.rs  metrics.rs  openai.rs  rerank.rs  service.rs
kowitodb-sql/: Cargo.toml  README.md
kowitodb-sql/src/: lib.rs  parser.rs  provider.rs
kowitodb-storage/: Cargo.toml  README.md
kowitodb-storage/src/: engine.rs  lance_engine.rs  lib.rs  schema.rs
kowitodb/src/: main.rs
scripts/: bump-version.py
sdk/go/: Makefile  README.md  client.go  go.mod
sdk/go/kowitodbpb/: kowitodb.pb.go  kowitodb_grpc.pb.go
sdk/python/: README.md  pyproject.toml
sdk/python/kowitodb/: __init__.py  kowitodb_pb2.py  kowitodb_pb2_grpc.py
sdk/python/kowitodb/integrations/: __init__.py  langchain.py  llamaindex.py
sdk/python/scripts/: gen.sh
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/proto/: kowitodb.proto
sdk/typescript/scripts/: gen-proto-types.js
sdk/typescript/src/: client.ts  index.ts  service.ts  types.ts
