[workspace]
members = [
    "kowitodb-core",
    "kowitodb-storage",
    "kowitodb-index",
    "kowitodb-planner",
    "kowitodb-server",
    "kowitodb",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KowitoDB Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "54"
datafusion = "44"
datafusion-expr = "44"
datafusion-common = "44"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"

# Internal crates
kowitodb-core = { path = "kowitodb-core" }
kowitodb-storage = { path = "kowitodb-storage" }
kowitodb-index = { path = "kowitodb-index" }
kowitodb-planner = { path = "kowitodb-planner" }
kowitodb-server = { path = "kowitodb-server" }
