[workspace]
members = [
    "kowitodb-core",
    "kowitodb-storage",
    "kowitodb-index",
    "kowitodb-planner",
    "kowitodb-sql",
    "kowitodb-server",
    "kowitodb",
]
resolver = "2"

# Optimized profile for production binaries: maximize runtime performance and
# minimize binary size. `lto = "thin"` keeps link time reasonable while still
# inlining across crates; `codegen-units = 1` trades build time for faster code.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
incremental = false

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["KowitoDB Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "58"
datafusion = "53"
datafusion-expr = "53"
datafusion-common = "53"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"

# Internal crates
kowitodb-core = { path = "kowitodb-core" }
kowitodb-storage = { path = "kowitodb-storage" }
kowitodb-index = { path = "kowitodb-index" }
kowitodb-planner = { path = "kowitodb-planner" }
kowitodb-sql = { path = "kowitodb-sql" }
kowitodb-server = { path = "kowitodb-server" }
