[package]
name = "kowitodb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and primitives for KowitoDB — the database built for AI agents."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
arrow.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
