[package]
name = "kowitodb-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kowitodb-core.workspace = true
kowitodb-index.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
