[package]
name = "kowitodb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kowitodb-core.workspace = true
kowitodb-storage.workspace = true
kowitodb-index.workspace = true
kowitodb-planner.workspace = true
kowitodb-sql.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
dashmap.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"
