[package]
name = "kowitodb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "KowitoDB engine + gRPC server: vector, full-text, graph, SQL and agent memory behind one ai.ask()."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kowitodb-core.workspace = true
kowitodb-storage.workspace = true
kowitodb-index.workspace = true
kowitodb-planner.workspace = true
kowitodb-sql.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["tls"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
axum = "0.7"
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
dashmap.workspace = true
sled = "0.34"
lru = "0.12"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Local embedding model (Candle). Optional — heavy dependency tree; fetches the
# model from the Hugging Face hub on first use.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }
hf-hub = { version = "0.3", optional = true }

[features]
# Use a Lance dataset as the storage backend instead of the default sled store.
lance = ["kowitodb-storage/lance"]
# Bundle a local Candle embedding model (KOWITODB_EMBEDDING_PROVIDER=local).
local-embeddings = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]
# On-device Candle cross-encoder reranker (KOWITODB_RERANKER_PROVIDER=local).
cross-encoder-rerank = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]

[build-dependencies]
tonic-build = "0.12"
# Bundled protoc binary — removes the system `protoc` prerequisite on the
# common dev platforms so a fresh clone builds with no extra install.
protoc-bin-vendored = "3"
