[package]
name = "kowitodb-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kowitodb-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
