[package]
name = "kowitodb-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "DataFusion-backed SQL over KowitoDB knowledge objects."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kowitodb-core.workspace = true
kowitodb-storage.workspace = true
datafusion.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
