[package]
name = "kowitodb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kowitodb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
lance = { version = "7.0.0", default-features = false, optional = true }
arrow = { workspace = true, optional = true }

[dependencies.sled]
version = "0.34"
features = []

[features]
lance = ["dep:lance", "dep:arrow"]
