[package]
name = "kowitodb"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kowitodb"
path = "src/main.rs"

[dependencies]
kowitodb-core.workspace = true
kowitodb-storage.workspace = true
kowitodb-index.workspace = true
kowitodb-planner.workspace = true
kowitodb-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# Build the CLI with the Lance storage backend available via `serve --storage lance`.
lance = ["kowitodb-server/lance"]
# Build the CLI with the on-device Candle embedding model (KOWITODB_EMBEDDING_PROVIDER=local).
local-embeddings = ["kowitodb-server/local-embeddings"]
